# orogen

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.prod.yml  docker-compose.yml  grok-ccs-probe-a.txt  nginx.conf  proxies.md  proxy.md  test-file.txt  test-models.sh
.cargo/: config.toml
docs/: codex-models-reference.md
examples/: set-account-proxy.rs  set-account-routing-healthy.rs
local-model/: README.md
local-model/configs/: qwen35-continual-pretraining-pilot-round-1.json  qwen35-workflow-trace-sft-round-1.json  qwen35-workflow-trace-sft-search-wave-1.json  qwen35-workflow-trace-sft-search-wave-2.json  qwen35-workflow-trace-sft-search-wave-3-chat-quality-repair.json  qwen35-workflow-trace-sft-search-wave-4-repaired-exploit.json
local-model/corpora/: qwen35-continual-pretraining-round-1-corpus-manifest.json  qwen35-workflow-trace-sft-round-1-manifest.json  qwen35-workflow-trace-sft-round-1-search-ready-manifest.json
local-model/evals/: qwen35-agent-style-eval-cases.json
migrations/: 001_initial_schema.sql  002_users_plans.sql  003_providers_models.sql  004_conversations_media.sql  005_codex_accounts.sql  006_public_model_routes_and_account_routing.sql  007_plan_public_models.sql  008_curate_codex_models.sql  009_credit_quota_and_usage_ledger.sql
scripts/: backup.sh  chatgpt-web-model-test.mjs  check-chatgpt-profile-cookies.py  grok-profile-session.mjs  restart-local.sh
src/: cli_chat.rs  config.rs  conversation.rs  error.rs  main.rs
src/account/: pool.rs  (+1 more)
web/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
(+340 files in other folders)
